[package]
name = "address-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.7"
reqwest = {version = "0.11.10",features = ["json","cookies"] }
serde_json = "*"
tokio = {version = "*", features = ["full","signal","rt"] }
scraper= "*"
regex = "*"
serde = { version = "1.0", features = [ "derive" ] }
clap = {version = "*", features = ["derive"] }